third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/missing-display.rs
use thiserror::Error;

#[derive(Error, Debug)]
pub enum MyError {
    First,
    Second,
}

fn main() {}
